# openvast

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml  vast-qwen4090.sh
.github/workflows/: tests.yml
assets/: logo.txt
openvast/: __init__.py  models.yaml
tests/: test_core.py
