[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvast"
version = "0.1.0"
description = "A muted terminal dashboard for renting vast.ai GPUs, running llama.cpp models, and wiring them into your coding agent."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dmitry Vedenyapin" }]
keywords = ["vast.ai", "llama.cpp", "llm", "gpu", "tui", "opencode", "textual"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
openvast = "openvast:main"

[project.urls]
Homepage = "https://github.com/dimavedenyapin/openvast"
Repository = "https://github.com/dimavedenyapin/openvast"
Issues = "https://github.com/dimavedenyapin/openvast/issues"

[tool.setuptools.packages.find]
include = ["openvast*"]

[tool.setuptools.package-data]
openvast = ["models.yaml"]
